Fixed overflow of about section and media query for hours in forecast view.

--- a/src/ui/styles/main/about.css
+++ b/src/ui/styles/main/about.css
@@ -95,8 +95,9 @@
     display: none;
 }
 
-.about-container details > .about-intro > .article {
+.about-container details > .about-intro > article {
     flex: 1;
+    overflow-y: auto;
 }
 
 .about-container section * {
