--- a/src/ui/styles/main/hourly.css
+++ b/src/ui/styles/main/hourly.css
@@ -358,7 +358,7 @@
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 400px) {
     .section3 {
         padding: 5px;
     }
